--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MyHolidayFamiliyPlaner-lib</name>
+	<name>MyHolidayFamilyPlaner</name>
 	<comment>Project MyHolidayFamiliyPlaner-lib created by Buildship.</comment>
 	<projects>
 	</projects>
