--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,20 @@
 
 #######Test
+server.port=8080
+
+
+spring.profiles.active=dev
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=default
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/Website
+spring.datasource.tomcat.jdbc-interceptors=${spring.datasource.url}
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=Jtashe16
