Ordner Struktur wurde verändert führt aber erneut zu neuen problemen

--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,13 @@
+#PROFILES
+spring.profiles.active=dev
 
-#######Test
+#JPA
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/Website
+spring.datasource.username=postgres
+spring.datasource.password=54Evrenfb
