--- a/application.properties
+++ b/application.properties
@@ -8,6 +8,6 @@ spring.jpa.database=postgresql
 spring.jpa.show-sql=true
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/Website
+spring.datasource.url=jdbc:postgresql://localhost:5432/FamilyPlaner
 spring.datasource.username=postgres
-spring.datasource.password=54Evrenfb
+spring.datasource.password=Jtashe16
