--- a/application.properties
+++ b/application.properties
@@ -1,13 +1,22 @@
+server.port=8080
 #PROFILES
 spring.profiles.active=dev
 
 #JPA
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=postgresql
+
+spring.jpa.database=default
 spring.jpa.show-sql=true
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/Website
+#Datasources
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/Website
 spring.datasource.username=postgres
-spring.datasource.password=54Evrenfb
+spring.datasource.password=deinpasswortvonpgadmin4
+
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+systemProp.sonar.host.url=http://localhost:8080
