update holiday.html rüchgängig

--- a/application.properties
+++ b/application.properties
@@ -11,9 +11,9 @@ spring.jpa.show-sql=true
 
 #Datasources
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/Website
+spring.datasource.url=jdbc:postgresql://localhost:5432/FamilyPlaner
 spring.datasource.username=postgres
-spring.datasource.password=deinpasswortvonpgadmin4
+spring.datasource.password=Jtashe16
 
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
